# Api_Life_Is_Strange

./: .env  alembic.ini  main.py  pyproject.toml
app/: main.py
app/db/: database.py  dataset.json
app/db/migrations/: env.py
app/db/migrations/versions/: 10c143ebc12f_adicionando_tabela_para_o_refresh_token.py  1e4de7c0b2cc_adicionando_tabela_de_refresh_token.py  99655bd68b82_starting_the_user_table.py  aac25d0aec1f_atualizando_tamanho_do_campo_de_senha_.py  cd3fab4c0cd8_add_user_model.py
app/db/models/: refresh_token_model.py  user_model.py
app/routes/v1/: user_routes.py
app/schemas/: user_schemas.py
app/services/: auth_user.py
app/shared/: depends.py
